# dayshield-core

./: Cargo.toml  README.md  RELEASE_QUICK_START.md  UPDATE_SYSTEM.md  manifest.example.json  path_check.txt
dayshield-core/: Cargo.toml
dayshield-core/src/: ai_engine.rs  ai_model.rs  main.rs  schedules.rs
dayshield-core/src/api/: acme.rs  admin.rs  ai.rs  aliases.rs  auth.rs  backup.rs  cloudflared.rs  crowdsec.rs  dashboard.rs  dhcp.rs  dns.rs  dns_overrides.rs  dot.rs  dynamic_dns.rs  firewall.rs  gateways.rs  interfaces.rs  logs.rs  metrics.rs  mod.rs  nat.rs  notify.rs  ntp.rs  rulesets.rs  schedules.rs  suricata.rs  system.rs  wireguard.rs
dayshield-core/src/auth/: middleware.rs  mod.rs  model.rs  password.rs  session.rs  storage.rs
dayshield-core/src/backup/: create.rs  encrypt.rs  mod.rs  model.rs  restore.rs  scheduler.rs  verify.rs
dayshield-core/src/captive_portal/: mod.rs
dayshield-core/src/config/: mod.rs  models.rs  storage.rs
dayshield-core/src/engine/: ipv6.rs  mod.rs
dayshield-core/src/logging/: mod.rs
dayshield-core/src/logs/: firewall.rs  mod.rs  suricata.rs  system.rs  tail.rs  websocket.rs
dayshield-core/src/metrics/: buffer.rs  collector.rs  crowdsec.rs  firewall.rs  mod.rs  network.rs  suricata.rs  system.rs  websocket.rs
dayshield-core/src/nat/: config.rs  mod.rs  model.rs  nftables.rs  validate.rs
dayshield-core/src/notify/: mod.rs  model.rs  queue.rs  rate_limit.rs  smtp.rs  templates.rs  worker.rs
dayshield-core/src/ntp/: apply.rs  config.rs  mod.rs  model.rs  status.rs  validate.rs
dayshield-core/src/rules/: mod.rs  (+4 more)
(+16 files in other folders)
