[package]
name = "dayshield-core"
version = "0.1.0"
edition = "2021"
description = "DayShield Firewall backend orchestrator"
authors = ["DayShield Team"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json"] }

# HTTP middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (used for URL-table alias fetching)
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
